# eman2

./: .coveralls.yml  .gitmodules  .travis.yml  CMakeLists.txt  EMAN parser options.xlsx  Jenkinsfile  TODO  appveyor.yml  boost_string_to_byte.patch  convertQT4toQT5.py  e2proc2d_args.txt  make_images.py  ops_common.py  opts.csv  opts.json  opts.py  opts.txt  opts.xlsx  parse_indent_errors_from_byte-compilation.sh  pdict.txt  process_coverage_files.sh  qtgui_modules.txt  run_eman_div_fixer.sh  update_wiki_program_options.py  wiki-binary install.txt  wiki-source install.txt
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: main.yml
broken/: e22.py  e2ali2img.py  e2fileinfo.py  e2findsubunit.py  e2flick.py  e2helical_recons.py  e2markbadparticles.py  e2modeleval.py  e2montecarlorecon.py  e2preferences.py  e2refine_evenodd.py  e2remoted.py  e2resolution.py  e2scp.py  e2tomoaverage.py  em3Dhelloworld.py
ci_support/: build_no_recipe.sh  build_recipe.sh  circleci.sh  conda.sh  jenkinsci.sh  setup_conda.sh
ci_support/constructor-huge/: construct.yaml
ci_support/constructor-mini/: construct.yaml
cmake/: Boost.cmake  FindPyTest.cmake  FindPython.cmake  GSL.cmake  HDF5.cmake  OpenGL.cmake  Python.cmake  functions.cmake  testing.cmake
doc/: CMakeLists.txt
doc/wiki/: e2RCTboxer.txt  e2a2d_align.txt  e2a2d_average.txt  e2a2d_masks.txt  e2a2d_stat.txt  e2align2d.txt  e2align3d.txt  e2basis.txt  e2bdb.txt  e2boxadjust.txt  e2boxer.txt  e2boxer_old.txt  e2buildsets.txt  e2buildstacks.txt  e2classaverage.txt  e2classes_denovo.txt  e2classesbyref.txt  e2classextract.txt  e2classify.txt  e2classifycnn.txt  e2classifykmeans.txt  e2classifyligand.txt  e2ctf.txt  (+166 more)
docs/: e2RCTboxer_py.html  e2_py.html  e2_real_py.html  e2a2d_align_py.html  e2a2d_average_py.html  e2a2d_stat_py.html  e2align2d_py.html  e2align3d_py.html  e2basis_py.html  e2bdb_py.html  e2boxadjust_py.html  e2boxer_old_py.html  e2boxer_py.html  e2buildsets_py.html  e2buildstacks_py.html  e2classaverage_py.html  e2classes_denovo_py.html  e2classesbyref_py.html  e2classextract_py.html  e2classify_py.html  e2classifykmeans_py.html  e2classifyligand_py.html  e2classifytree_py.html  e2classptcl_py.html  e2classvsproj_py.html  e2cmmtomrc_py.html  e2cmpxplor_py.html  e2ctf2eman1_py.html  e2ctf_auto_py.html  e2ctf_py.html  e2ctffind3util_py.html  e2ctfsim_py.html  e2ddd_movie_py.html  e2ddd_particles_py.html  e2display_py.html  e2emx_py.html  e2eotest_py.html  e2erasefiducials_py.html  e2euler_refine_py.html  e2eulerxplor_py.html  (+163 more)
eman_fixer/: __main__.py  fix_eman_div.py
examples/: UnitTestGetComplexAt2D.py  UnitTestGetComplexAt3D.py  alignbystars.py  alignertest_rt2d3dtree.py  alignnrg.py  ampcor.py  avsub.py  breakbrick.py  build_ali_lst.py  cmpspeedtest.py  comparepairs.py  compute_deconvolution.py  convnet_pickparticle.py  crystal_index.py  cudaspeedtest.py  ddd_simulation.py  denoiseautoencoder.py  diffractsim.py  displaydemo.py  drawshape.py  e2alignmenttest.py  e2aligntest.py  e2boxer_movie.py  e2convnet_classifyptcls.py  e2convnet_pickptcl_tensorflow.py  e2cylinder.py  e2ddd_powspec.py  e2ddd_ptclaligner.py  e2enrich_byproj.py  e2extension_change.py  e2extractequalorient.py  e2fftsynth.py  e2figureplot.py  e2helixcoords2boxes.py  e2maskimod.py  e2melonball.py  e2moviealigner.py  e2moviealigner2.py  e2moviealigner3.py  e2movieboxer.py  (+107 more)
images/: CMakeLists.txt
indent_reports/: parse_indent_errors.py
libEM/: CMakeLists.txt  all_imageio.h  averager.cpp  averager.h  boxingtools.cpp  byteorder.cpp  cmp.cpp  emdata.cpp  emdata.h  emdata_core.cpp  emdata_core.h  emdata_io.cpp  emdata_metadata.cpp  emdata_metadata.h  emdata_transform.cpp  emdata_transform.h  emftgl.cpp  emobject.h  emutil.cpp  emutil.h  geometry.cpp  geometry.h  glutil.cpp  glutil.h  hdfio2.cpp  marchingcubes.cpp  marchingcubes.h  pointarray.cpp  processor.cpp  projector.cpp  projector.h  reconstructor.cpp  util.cpp  util.h  vec3.h
libEM/sparx/: CMakeLists.txt  emdata_sparx.h
libpyEM/: Anneal.py  CMakeLists.txt  EMAN2.py  EMAN2PAR.py  EMAN2_utils.py  EMAN2db.py  EMAN2jsondb.py  EMAN2star.py  Simplex.py  e3argparse.py  emdata_pickle.h  libpyEMData2.cpp  libpyTypeConverter2.cpp  libpyUtils2.cpp  mpi_eman.py  proc.py  typeconverter.cpp  typeconverter.h
libpyEM/EMAN2/: EMAN2db.py  EMAN2jsondb.py  __init__.py  db.py  jsondb.py  par.py  utils.py
libpyEM/eman/: proc.py
libpyEM/qtgui/: CMakeLists.txt  boxertools.py  em3Dfonts.py  emanimationutil.py  emapplication.py  emboxerbase.py  embrowse.py  embrowser.py  emdataitem3d.py  emdatastorage.py  emfoldhunterstat.py  emform.py  emglobjects.py  emhist.py  emimage.py  emimage2d.py  emimage3d.py  emimage3diso.py  emimage3dslice.py  emimage3dsym.py  emimage3dvol.py  emimagemx.py  emimageutil.py  emitem3d.py  emlights.py  empdbitem3d.py  empdbvaltool.py  empdbviewer.py  emplot2d.py  emplot3d.py  empmtabwidgets.py  empmwidgets.py  emrctboxergui.py  emrctstrategy.py  emsave.py  emscene3d.py  emselector.py  emshape.py  emshapeitem3d.py  emsprworkflow.py  (+3 more)
proc2d/: e2proc2d_args.txt
programs/: CMakeLists.txt  e2RCTboxer.py  e2_real.py  e2_run_modules.py  e2a2d_align.py  e2a2d_average.py  e2a2d_stat.py  e2align2d.py  e2align3d.py  e2basis.py  e2bdb.py  e2boxadjust.py  e2boxer.py  e2boxer_old.py  e2buildsets.py  e2buildstacks.py  e2classaverage.py  e2classesbyref.py  e2classextract.py  e2classify.py  e2classifycnn.py  e2classifykmeans.py  e2classifyligand.py  e2classifytree.py  e2classptcl.py  e2classvsproj.py  e2cmpxplor.py  e2compress.py  e2ctf.py  e2ctf2eman1.py  e2ctf_auto.py  e2ctffind3util.py  e2ctfsim.py  e2ddd_external.py  e2ddd_movie.py  e2ddd_particles.py  e2display.py  e2eer.py  e2emx.py  e2enrich.py  (+153 more)
pyemtbx/: CMakeLists.txt
rt/imageio/: CMakeLists.txt  imageio.cpp  test_eer.cpp
scripts/: __init__.py  __main__.py  constants.py  convertQT4toQT5.py  file.py  inspect_signal_usage.py  list_module_classes.py  parse_indent_errors_from_byte-compilation.sh  qt5_move.sh
tests/: run_tests.bat  run_tests.sh  test_binary_installation.bat  test_binary_installation.sh  test_git_hash.sh
(+160 files in other folders)
